Adds sermoes page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,33 @@
-<h1>Igreja Batista Alianca da Graca</h1>
-
-<p>Em construção...</p>
+<!DOCTYPE html>
+<html lang="pt">
+	<head>
+		<title>Igreja Batista Aliança da Graça</title>
+		<link rel='stylesheet' type='text/css' href="style.css">
+		<meta charset="utf-8">
+	</head>
+	<body>
+		<h1>Igreja Batista Alianca da Graca</h1>
+		<div>
+			<ul>
+				<li>
+					<a href="">Início</a>
+				</li>
+				<li>
+					<a href="./sermoes/sermoes.html">Sermões</a>
+				</li>
+				<li>
+					<a href="#">Estudos</a>
+				</li>
+				<li>
+					<a href="#">Salmos</a>
+				</li>
+				<li>
+					<a href="#">História</a>
+				</li>
+				<li>
+					<a href="#">Biblioteca</a>
+				</li>
+			</ul>
+		</div>
+	</body>
+</html>
