Adds all other html pages

--- a/sermoes/sermoes.html
+++ b/sermoes/sermoes.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-	<h1 style="text-align: center">Sermões IBAG - Igreja Batista Aliança da Graça</h1>
+	<h1>Igreja Batista Aliança da Graça</h1>
+	<h2>Sermões</h2>
 
 	<nav>
 		<ul class="navbar">
