--- a/index.html
+++ b/index.html
@@ -7,27 +7,38 @@
 	</head>
 	<body>
 		<h1>Igreja Batista Alianca da Graca</h1>
+		<h2>Início</h2>
 		<div>
 			<ul>
 				<li>
-					<a href="">Início</a>
+					<a href="./index.html">Início</a>
 				</li>
 				<li>
 					<a href="./sermoes/sermoes.html">Sermões</a>
 				</li>
 				<li>
-					<a href="#">Estudos</a>
+					<a href="./estudos/estudos.html">Estudos</a>
 				</li>
 				<li>
-					<a href="#">Salmos</a>
+					<a href="./salmos/salmos.html">Salmos</a>
 				</li>
 				<li>
-					<a href="#">História</a>
+					<a href="./historia/historia.html">História</a>
 				</li>
 				<li>
-					<a href="#">Biblioteca</a>
+					<a href="./biblioteca/biblioteca.html">Biblioteca</a>
 				</li>
 			</ul>
+		</div>
+		<div>
+			<h2>Quem somos?</h2>
+			<p>Somos uma igreja batista confessional localizada na cidade de Recife, no bairro da estância. Professamos a confissão de fé batista de 1689.</p>
+			<h2>Programação<h2>
+			<h3>Domingos</h3>
+			<p>Culto: 10:00</p>
+			<p>Almoço: 12:00</p>
+			<p>Escola bíblica: 13:30</p>
+			<p>Evangelismo no bairro: 16:30</p>
 		</div>
 	</body>
 </html>
