--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="pt">
 	<head>
 		<title>Igreja Batista Aliança da Graça</title>
-		<link rel='stylesheet' type='text/css' href="style.css">
+		<link rel='stylesheet' type='text/css' href="styles.css">
+		<link rel="icon" href="/img/logo.jpg" type="image/icon type">
 		<meta charset="utf-8">
 	</head>
 	<body>
