Adds main logo and some styles

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 	<head>
 		<title>Igreja Batista Aliança da Graça</title>
 		<link rel='stylesheet' type='text/css' href="styles.css">
-		<link rel="icon" href="/img/logo.jpg" type="image/icon type">
+		<link rel="icon" href="./img/logo.jpg" type="image/icon type">
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<h1>Igreja Batista Alianca da Graca</h1>
-		<h2>Início</h2>
-		<div>
-			<ul>
+		<header>
+		<nav>
+			<ul class="site-main-menu">
 				<li>
 					<a href="./index.html">Início</a>
 				</li>
@@ -30,16 +29,28 @@
 					<a href="./biblioteca/biblioteca.html">Biblioteca</a>
 				</li>
 			</ul>
+		</nav>
+		<div class="site-heading">
+			<a href="./index.html"><img class="main-logo" src="./img/logo.png"></img></a>
+			<h1>Igreja Batista Alianca da Graca</h1>
 		</div>
+		</header>
+		<main>
 		<div>
 			<h2>Quem somos?</h2>
 			<p>Somos uma igreja batista confessional localizada na cidade de Recife, no bairro da estância. Professamos a confissão de fé batista de 1689.</p>
 			<h2>Programação<h2>
 			<h3>Domingos</h3>
-			<p>Culto: 10:00</p>
-			<p>Almoço: 12:00</p>
-			<p>Escola bíblica: 13:30</p>
-			<p>Evangelismo no bairro: 16:30</p>
+			<ul>
+				<li>Culto: 10h</li>
+				<li>Almoço: 12h</li>
+				<li>Escola bíblica: 13h30</li>
+				<li>Evangelismo no bairro: 16:30</li>
+			</ul>
 		</div>
+		</main>
+		<footer>
+			<p>Feito por <a href="https://mateusmelo.xyz" target="_blank"rel="noopener">Mateus Melo</a>  - ibagrecife.xyz © 2021</p>
+		</footer>
 	</body>
 </html>
