--- a/biblioteca.html
+++ b/biblioteca.html
@@ -36,19 +36,10 @@
 		</div>
 		</header>
 		<main>
-		<div>
-			<h2>Quem somos?</h2>
-			<p>Somos uma igreja batista confessional localizada na cidade de Recife, no bairro da estância. Professamos a confissão de fé batista de 1689.</p>
-			<h2>Programação<h2>
-			<h3>Domingos</h3>
-			<ul>
-				<li>Culto: 10h</li>
-				<li>Almoço: 12h</li>
-				<li>Escola bíblica: 13h30</li>
-				<li>Evangelismo no bairro: 16:30</li>
-			</ul>
-		</div>
-		</main>
+            <div>
+                <h1>Em construção...</h1>
+            </div>
+    	</main>
 		<footer>
 			<p>Feito por <a href="https://mateusmelo.xyz" target="_blank"rel="noopener">Mateus Melo</a>  - ibagrecife.xyz © 2021</p>
 		</footer>
