--- a/sermoes.html
+++ b/sermoes.html
@@ -1,28 +1,42 @@
-<!doctype html>
-<html>
-<head>
-<title>Sermões IBAG</title>
-<meta name="description" content="Sermões gravados">
-<meta name="keywords" content="Sermões Igreja Batista Aliança da Graça">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-</head>
-
-<body>
-	<h1>Igreja Batista Aliança da Graça</h1>
-	<h2>Sermões</h2>
-
-	<nav>
-		<ul class="navbar">
- 			<li><a href="../index.html">Início</a></li>
-                        <li><a href="../sermoes/sermoes.html">Sermões</a></li>
-			<li><a href="../estudos/estudos.html">Estudos</a></li>
-			<li><a href="../salmos/salmos.html">Salmos</a></li>
-			<li><a href="../historia/historia.html">História</a></li>
-			<li><a href="../biblioteca/biblioteca.html">Biblioteca</a></li>
-		</ul>
-	</nav>
-
-	<div>
+<!DOCTYPE html>
+<html lang="pt">
+	<head>
+		<title>Igreja Batista Aliança da Graça</title>
+		<link rel='stylesheet' type='text/css' href="styles.css">
+		<link rel="icon" href="./img/logo.jpg" type="image/icon type">
+		<meta charset="utf-8">
+	</head>
+	<body>
+		<header>
+		<nav>
+			<ul class="site-main-menu">
+				<li>
+					<a href="./index.html">Início</a>
+				</li>
+				<li>
+					<a href="./sermoes.html">Sermões</a>
+				</li>
+				<li>
+					<a href="./estudos.html">Estudos</a>
+				</li>
+				<li>
+					<a href="./salmos.html">Salmos</a>
+				</li>
+				<li>
+					<a href="./historia.html">História</a>
+				</li>
+				<li>
+					<a href="./biblioteca.html">Biblioteca</a>
+				</li>
+			</ul>
+		</nav>
+		<div class="site-heading">
+			<a href="./index.html"><img class="main-logo" src="./img/logo.png"></img></a>
+			<h1>Igreja Batista Alianca da Graca</h1>
+		</div>
+		</header>
+		<main>
+		<div>
 		<h3>Sermões 2021:</h3>
 		<ul>
 			<li>
@@ -143,7 +157,10 @@
 				</ul>
 			</li>
 		</ul>
-
-	</div>
-
-</body>
+		</div>
+		</main>
+		<footer>
+			<p>Feito por <a href="https://mateusmelo.xyz" target="_blank"rel="noopener">Mateus Melo</a>  - ibagrecife.xyz © 2021</p>
+		</footer>
+	</body>
+</html>
