--- a/sermoes.html
+++ b/sermoes.html
@@ -7,34 +7,18 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<header>
-		<nav>
-			<ul class="site-main-menu">
-				<li>
-					<a href="./index.html">Início</a>
-				</li>
-				<li>
-					<a href="./sermoes.html">Sermões</a>
-				</li>
-				<li>
-					<a href="./estudos.html">Estudos</a>
-				</li>
-				<li>
-					<a href="./salmos.html">Salmos</a>
-				</li>
-				<li>
-					<a href="./historia.html">História</a>
-				</li>
-				<li>
-					<a href="./biblioteca.html">Biblioteca</a>
-				</li>
-			</ul>
-		</nav>
-		<div class="site-heading">
+		<div class="heading">
 			<a href="./index.html"><img class="main-logo" src="./img/logo.png"></img></a>
 			<h1>Igreja Batista Alianca da Graca</h1>
 		</div>
-		</header>
+		<div class="links">
+					<a href="./index.html">Início</a>
+					<a href="./sermoes.html">Sermões</a>
+					<a href="./estudos.html">Estudos</a>
+					<a href="./salmos.html">Salmos</a>
+					<a href="./historia.html">História</a>
+					<a href="./biblioteca.html">Biblioteca</a>
+		</div>
 		<main>
 		<div>
 		<h3>Sermões 2021:</h3>
