--- a/salmos.html
+++ b/salmos.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="heading">
 			<a href="./index.html"><img class="main-logo" src="./img/logo.png"></img></a>
-			<h1>Igreja Batista Alianca da Graca</h1>
+            <h1>Igreja Batista Aliança da Graça</h1>
 		</div>
 		<div class="links">
 					<a href="./index.html">Início</a>
