--- a/estudos.html
+++ b/estudos.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="heading">
 			<a href="./index.html"><img class="main-logo" src="./img/logo.png"></img></a>
-			<h1>Igreja Batista Alianca da Graca</h1>
+			<h1>Igreja Batista Aliança da Graça</h1>
 		</div>
 		<div class="links">
 					<a href="./index.html">Início</a>
@@ -20,9 +20,9 @@
 					<a href="./biblioteca.html">Biblioteca</a>
 		</div>
 		<main>
-		<div>
-			<h1>Em construção...</h1>
-		</div>
+		    <div>
+			    <h1>Em construção...</h1>
+		    </div>
 		</main>
 		<footer>
 			<p>Feito por <a href="https://mateusmelo.xyz" target="_blank"rel="noopener">Mateus Melo</a>  - ibagrecife.xyz © 2021</p>
