--- a/salmos.html
+++ b/salmos.html
@@ -4,7 +4,7 @@
 		<title>Igreja Batista Aliança da Graça</title>
 		<link rel='stylesheet' type='text/css' href="styles.css">
 		<link rel="icon" href="./img/logo.jpg" type="image/icon type">
-		<meta charset="utf-8">
+		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 		<div class="heading">
