--- a/estudos.html
+++ b/estudos.html
@@ -7,25 +7,33 @@
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<div class="heading">
-			<a href="./index.html"><img class="main-logo" src="./img/logo.png"></img></a>
-			<h1>Igreja Batista Aliança da Graça</h1>
-		</div>
-		<div class="links">
+		<header>
+			<div class="heading">
+				<a href="./index.html"><img class="main-logo" src="./img/logo.png"></img></a>
+				<h1>Igreja Batista Aliança da Graça</h1>
+			</div>
+			<div class="links">
 					<a href="./index.html">Início</a>
 					<a href="./sermoes.html">Sermões</a>
 					<a href="./estudos.html">Estudos</a>
 					<a href="./salmos.html">Salmos</a>
 					<a href="./historia.html">História</a>
 					<a href="./biblioteca.html">Biblioteca</a>
-		</div>
+			</div>
+		</header>
 		<main>
 		    <div>
 			    <h1>Em construção...</h1>
 		    </div>
 		</main>
 		<footer>
-			<p>Feito por <a href="https://mateusmelo.xyz" target="_blank"rel="noopener">Mateus Melo</a>  - ibagrecife.xyz © 2021</p>
+				<div class="links">
+					<a href="https://www.facebook.com/ibagraca/" target="_blank" rel="noopener"><img class="link-logo" src="./img/fb.svg" alt="facebook"></a>
+					<a href="https://www.instagram.com/ibagrecife/" target="_blank" rel="noopener"><img class="link-logo" src="./img/insta.svg" alt="instagram"></a>
+					<a href="https://www.youtube.com/channel/UC_EtxjQqCBB5Z_4F6P5xU-Q" target="_blank" rel="noopener"><img class="link-logo" src="./img/yt.svg" alt="youtube"></a>
+					<a href="mailto:ibagraca@gmail.com" target="_blank" rel="noopener"><img class="link-logo" src="./img/gmail.svg" alt="send mail"></a>
+				</div>
+			<p>Feito por <a href="https://mateusmelo.xyz" target="_blank" rel="noopener">Mateus Melo</a>  - ibagrecife.xyz © 2021</p>
 		</footer>
 	</body>
 </html>
