--- a/downloads.html
+++ b/downloads.html
@@ -23,9 +23,11 @@
 			</div>
 		</header>
 		<main>
-		    <div>
-			    <h1>Em construção...</h1>
-		    </div>
+            <h3>Downloads:</h3>
+		    <ul>
+                <li><a href="./docs/evangelismo-ibag.pdf" target="_blank" rel="noopener">Folheto para evangelismo</a>
+                <li><a href="./docs/baby-catecismo-ibag.pdf" target="_blank" rel="noopener">Baby catecismo IBAG</a>
+            </ul>
 		</main>
 		<footer>
 				<div class="links">
