--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					<a href="./salmos.html">Salmos</a>
 					<a href="./historia.html">História</a>
 					<a href="./biblioteca.html">Biblioteca</a>
+					<a href="./downloads.html">Downloads</a>
 			</div>
 		</header>
 		<main>
