--- a/estudos.html
+++ b/estudos.html
@@ -28,6 +28,8 @@
 		    </div>
 		</main>
 		<footer>
+                <p><strong>Igreja Batista Aliança da Graça</strong></p>
+                <p>Rua João Teixeira, 507, Estância, CEP: 52.070-590 - Recife, Pernambuco</p>
 				<div class="links">
 					<a href="https://www.facebook.com/ibagraca/" target="_blank" rel="noopener"><img class="link-logo" src="./img/fb.svg" alt="facebook"></a>
 					<a href="https://www.instagram.com/ibagrecife/" target="_blank" rel="noopener"><img class="link-logo" src="./img/insta.svg" alt="instagram"></a>
