--- a/sermoes.html
+++ b/sermoes.html
@@ -16,6 +16,7 @@
 					<a href="./index.html">Início</a>
 					<a href="./sermoes.html">Sermões</a>
 					<a href="./estudos.html">Estudos</a>
+					<a href="./retiros.html">Retiros</a>
 					<a href="./salmos.html">Salmos</a>
 					<a href="./historia.html">História</a>
 					<a href="./biblioteca.html">Biblioteca</a>
