adds copyleft icon

--- a/sermoes.html
+++ b/sermoes.html
@@ -156,7 +156,7 @@
 					<a href="https://www.youtube.com/channel/UC_EtxjQqCBB5Z_4F6P5xU-Q" target="_blank" rel="noopener"><img class="link-logo" src="./img/yt.svg" alt="youtube"></a>
 					<a href="mailto:ibagraca@gmail.com" target="_blank" rel="noopener"><img class="link-logo" src="./img/gmail.svg" alt="send mail"></a>
 				</div>
-			<p>Feito por <a href="https://mateusmelo.xyz" target="_blank" rel="noopener">Mateus Melo</a>  - ibagrecife.xyz © 2021</p>
+			<p>Feito por <a href="https://mateusmelo.xyz" target="_blank" rel="noopener">Mateus Melo</a>  - ibagrecife.xyz 🄯 2021</p>
 		</footer>
 	</body>
 </html>
