fixes replace.py to include head.html. Removes link to pages under construction

--- a/header.html
+++ b/header.html
@@ -6,11 +6,11 @@
 	<div class="links">
 			<a href="./index.html">Início</a>
 			<a href="./sermoes.html">Sermões</a>
-			<a href="./estudos.html">Estudos</a>
+			<!-- <a href="./estudos.html">Estudos</a> -->
 			<a href="./retiros.html">Retiros</a>
-			<a href="./salmos.html">Salmos</a>
-			<a href="./historia.html">História</a>
-			<a href="./biblioteca.html">Biblioteca</a>
+			<!-- <a href="./salmos.html">Salmos</a> -->
+			<!-- <a href="./historia.html">História</a> -->
+			<!-- <a href="./biblioteca.html">Biblioteca</a> -->
 			<a href="./downloads.html">Downloads</a>
 	</div>
 </header>
