Overhauls the site design. Adds background image and minor tweaks

--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,9 @@
 <footer>
-        <p><strong>Igreja Batista Aliança da Graça</strong></p>
-        <p>Rua João Teixeira, 507, Estância, CEP: 52.070-590 - Recife, Pernambuco</p>
-		<div class="links">
+        <p><strong>Igreja Batista Aliança da Graça</strong><br>
+        Rua João Teixeira, 507, Estância<br>
+        Recife, Pernambuco<br>
+        CEP: 52.070-590</p>
+		<div class="img-links">
 			<a href="https://www.facebook.com/ibagraca/" target="_blank" rel="noopener"><img class="link-logo" src="./img/fb.svg" alt="facebook"></a>
 			<a href="https://www.instagram.com/ibagrecife/" target="_blank" rel="noopener"><img class="link-logo" src="./img/insta.svg" alt="instagram"></a>
 			<a href="https://www.youtube.com/channel/UC_EtxjQqCBB5Z_4F6P5xU-Q" target="_blank" rel="noopener"><img class="link-logo" src="./img/yt.svg" alt="youtube"></a>
@@ -9,3 +11,5 @@
 		</div>
 	<p>Feito por <a href="https://mateusmelo.xyz" target="_blank" rel="noopener">Mateus Melo</a>  - ibagrecife.xyz 🄯 2021</p>
 </footer>
+    </div>
+</div>
