--- a/source/retiros.html
+++ b/source/retiros.html
@@ -4,8 +4,8 @@
 	<body>
 		<!--HEADER-->
 		<main>
-		<div>
-			<h1>Retiro Petrolândia 2020</h1>
+		<div class="audio-list">
+			<h2>Retiro Petrolândia 2020</h2>
             <ul>
                 <li>
                     <div class="audio-item">
