Includes styles in source, updates website design

--- a/head.html
+++ b/head.html
@@ -3,4 +3,8 @@
 	<link rel='stylesheet' type='text/css' href="./styles.css">
 	<link rel="icon" href="./img/logo.jpg" type="image/icon type">
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:url" content="https://ibagrecife.xyz">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Igreja Batista Aliança da Graça">
+	<meta property="og:description" content="Uma igreja batista confessional em Recife">
 </head>
