--- a/header.html
+++ b/header.html
@@ -1,18 +1,15 @@
-<div class="body-wrapper">
 <header>
-	<div class="heading">
-		<a href="./index.html"><img class="main-logo" src="./img/logo.png"></img></a>
-		<h1>Igreja Batista Aliança da Graça</h1>
-	</div>
 	<div class="links">
-			<a href="./index.html">Início</a>
-			<a href="./sermoes.html">Sermões</a>
-			<!-- <a href="./estudos.html">Estudos</a> -->
-			<a href="./retiros.html">Retiros</a>
-			<!-- <a href="./salmos.html">Salmos</a> -->
-			<!-- <a href="./historia.html">História</a> -->
-			<!-- <a href="./biblioteca.html">Biblioteca</a> -->
-			<a href="./downloads.html">Downloads</a>
+			<a class="box-wrapper"  href="./index.html">Início</a>
+			<a class="box-wrapper"  href="./sermoes.html">Sermões</a>
+			<!-- <a class="box-wrapper"  href="./estudos.html">Estudos</a> -->
+			<a class="box-wrapper"  href="./retiros.html">Retiros</a>
+			<!-- <a class="box-wrapper"  href="./salmos.html">Salmos</a> -->
+			<!-- <a class="box-wrapper"  href="./historia.html">História</a> -->
+			<!-- <a class="box-wrapper"  href="./biblioteca.html">Biblioteca</a> -->
+			<a class="box-wrapper"  href="./downloads.html">Downloads</a>
+			<a class="box-wrapper"  href="./sites-parceiros.html">Sites Parceiros</a>
 	</div>
 </header>
-    <div class="text-wrapper">
+<div class="body-wrapper box-wrapper">
+    <div class="text-wrapper"> 
