--- a/source/retiros.html
+++ b/source/retiros.html
@@ -4,43 +4,44 @@
 	<body>
 		<!--HEADER-->
 		<main>
-		<div class="audio-list">
+		<div>
 			<h2>Retiro Petrolândia 2020</h2>
+			<hr>
             <ul>
                 <li>
                     <div class="audio-item">
                         <p>1 - Manhã do domingo - Pr. Santanta Dória</p>
-                        <audio controls><source src="./audio/retiros/1-domingo-manha.mp3" type="audio/mpeg"></audio>
+                        <audio class="player" controls><source src="./audio/retiros/1-domingo-manha.mp3" type="audio/mpeg"></audio>
                     </div>
                 </li>
                 <li>
                     <div class="audio-item">
                         <p>2 - Noite do domingo - Pr. Santanta Dória</p>
-                        <audio controls><source src="./audio/retiros/2-domingo-noite.mp3" type="audio/mpeg"></audio>
+                        <audio class="player" controls><source src="./audio/retiros/2-domingo-noite.mp3" type="audio/mpeg"></audio>
                     </div>
                 </li>
                 <li>
                     <div class="audio-item">
                         <p>3 - Manhã da segunda - Pr. Santanta Dória</p>
-                        <audio controls><source src="./audio/retiros/3-segunda-manha.mp3" type="audio/mpeg"></audio>
+                        <audio class="player" controls><source src="./audio/retiros/3-segunda-manha.mp3" type="audio/mpeg"></audio>
                     </div>
                 </li>
                 <li>
                     <div class="audio-item">
                         <p>4 - Noite da segunda - Pr. Santanta Dória</p>
-                        <audio controls><source src="./audio/retiros/4-segunda-noite.mp3" type="audio/mpeg"></audio>
+                        <audio class="player" controls><source src="./audio/retiros/4-segunda-noite.mp3" type="audio/mpeg"></audio>
                     </div>
                 </li>
                 <li>
                     <div class="audio-item">
                         <p>5 - Manhã da terça - Pr. Santanta Dória</p>
-                        <audio controls><source src="./audio/retiros/5-terca-manha.mp3" type="audio/mpeg"></audio>
+                        <audio class="player" controls><source src="./audio/retiros/5-terca-manha.mp3" type="audio/mpeg"></audio>
                     </div>
                 </li>
                 <li>
                     <div class="audio-item">
                         <p>6 - Noite da terça - Pr. Santanta Dória</p>
-                        <audio controls><source src="./audio/retiros/6-terca-noite.mp3" type="audio/mpeg"></audio>
+                        <audio class="player" controls><source src="./audio/retiros/6-terca-noite.mp3" type="audio/mpeg"></audio>
                     </div>
                 </li>
             </ul>
