Fixes email link

--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
 			<a href="https://www.facebook.com/ibagraca/" target="_blank" rel="noopener"><img class="link-logo" src="./img/fb.svg" alt="facebook"></a>
 			<a href="https://www.instagram.com/ibagrecife/" target="_blank" rel="noopener"><img class="link-logo" src="./img/insta.svg" alt="instagram"></a>
 			<a href="https://www.youtube.com/channel/UC_EtxjQqCBB5Z_4F6P5xU-Q" target="_blank" rel="noopener"><img class="link-logo" src="./img/yt.svg" alt="youtube"></a>
-			<a href="mailto:ibagraca@gmail.com" target="_blank" rel="noopener"><img class="link-logo" src="./img/gmail.svg" alt="send mail"></a>
+			<a href="mailto:ibgrecife@gmail.com" target="_blank" rel="noopener"><img class="link-logo" src="./img/gmail.svg" alt="send mail"></a>
 		</div>
 	<p>Feito por <a href="https://mateusmelo.xyz" target="_blank" rel="noopener">Mateus Melo</a>  - ibagrecife.xyz 🄯 2021</p>
 </footer>
