Update links page. Remove unused pages

--- a/header.html
+++ b/header.html
@@ -1,15 +1,10 @@
 <header>
-	<div class="links">
-			<a class="box-wrapper"  href="./index.html">Início</a>
-			<a class="box-wrapper"  href="./sermoes.html">Sermões</a>
-			<!-- <a class="box-wrapper"  href="./estudos.html">Estudos</a> -->
-			<a class="box-wrapper"  href="./retiros.html">Retiros</a>
-			<!-- <a class="box-wrapper"  href="./salmos.html">Salmos</a> -->
-			<!-- <a class="box-wrapper"  href="./historia.html">História</a> -->
-			<!-- <a class="box-wrapper"  href="./biblioteca.html">Biblioteca</a> -->
-			<a class="box-wrapper"  href="./downloads.html">Downloads</a>
-			<a class="box-wrapper"  href="./sites-parceiros.html">Sites Parceiros</a>
-	</div>
+  <div class="links">
+    <a class="box-wrapper" href="./index.html">Início</a>
+    <a class="box-wrapper" href="./retiros.html">Retiros</a>
+    <a class="box-wrapper" href="./downloads.html">Downloads</a>
+    <a class="box-wrapper" href="./links.html">Links</a>
+  </div>
 </header>
 <div class="body-wrapper box-wrapper">
-    <div class="text-wrapper"> 
+  <div class="text-wrapper">
